--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1> Welcome to Sky Developer</h1>
+
+<p>Here is our <a href="policy.html">Policy</a> and Terms of service <a href="terms.html">Terms<a/></p>
